WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
47399
[Qt] Web process cannot be debugged if it crashes in initialization
https://bugs.webkit.org/show_bug.cgi?id=47399
Summary
[Qt] Web process cannot be debugged if it crashes in initialization
Kimmo Kinnunen
Reported
2010-10-08 00:50:04 PDT
The initialization web process is hard to debug if it crashes in initialization. Mac gdb can be set waiting for the processes to be launched, but on Linux gdb this is cumbersome. The web process should wait some time before starting the initialization, so gdb can be attached to the process.
Attachments
Make it possible to attach gdb before web process is intialized.
(1.65 KB, patch)
2010-10-08 01:15 PDT
,
Kimmo Kinnunen
no flags
Details
Formatted Diff
Diff
Make it possible to attach gdb before web process is intialized.
(1.72 KB, patch)
2010-10-08 03:28 PDT
,
Kimmo Kinnunen
kenneth
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Rebase the previous patch to trunk.
(1.79 KB, patch)
2010-10-28 01:37 PDT
,
Kimmo Kinnunen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Kimmo Kinnunen
Comment 1
2010-10-08 01:15:48 PDT
Created
attachment 70207
[details]
Make it possible to attach gdb before web process is intialized.
Kimmo Kinnunen
Comment 2
2010-10-08 03:17:12 PDT
Comment on
attachment 70207
[details]
Make it possible to attach gdb before web process is intialized. Uploaded wrong patch, fails to build.
Kimmo Kinnunen
Comment 3
2010-10-08 03:28:27 PDT
Created
attachment 70219
[details]
Make it possible to attach gdb before web process is intialized.
WebKit Commit Bot
Comment 4
2010-10-13 05:00:54 PDT
Comment on
attachment 70219
[details]
Make it possible to attach gdb before web process is intialized. Rejecting patch 70219 from commit-queue. Failed to run "['./WebKitTools/Scripts/webkit-patch', '--status-host=queues.webkit.org', 'apply-attachment', '--force-clean', '--non-interactive', '--quiet', 70219]" exit_code: 2 Cleaning working directory Updating working directory Logging in as
commit-queue@webkit.org
... Fetching:
https://bugs.webkit.org/attachment.cgi?id=70219&action=edit
Fetching:
https://bugs.webkit.org/show_bug.cgi?id=47399
&ctype=xml Processing 1 patch from 1 bug. Processing patch 70219 from
bug 47399
. Failed to run "[u'/Projects/CommitQueue/WebKitTools/Scripts/svn-apply', u'--reviewer', u'Kenneth Rohde Christiansen', u'--force']" exit_code: 1 Full output:
http://queues.webkit.org/results/4449005
Eric Seidel (no email)
Comment 5
2010-10-14 11:38:50 PDT
This needs an updated patch which applies to tip of tree.
Kimmo Kinnunen
Comment 6
2010-10-28 01:37:39 PDT
Created
attachment 72160
[details]
Rebase the previous patch to trunk.
WebKit Commit Bot
Comment 7
2010-10-28 02:02:47 PDT
Comment on
attachment 72160
[details]
Rebase the previous patch to trunk. Clearing flags on attachment: 72160 Committed
r70760
: <
http://trac.webkit.org/changeset/70760
>
WebKit Commit Bot
Comment 8
2010-10-28 02:02:53 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 9
2010-10-28 03:43:17 PDT
http://trac.webkit.org/changeset/70760
might have broken GTK Linux 32-bit Release The following tests are not passing: inspector/audits-panel-functional.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug