2010-10-28  Kimmo Kinnunen  <kimmo.t.kinnunen@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

         [Qt] Web process cannot be debugged if it crashes in initialization
         https://bugs.webkit.org/show_bug.cgi?id=47399

         Wait 3 seconds for the debugger on debug mode if
         WEBKIT2_PAUSE_WEB_PROCESS_ON_LAUNCH environment variable is set.

         The debugging can be initiated for example in following way:
          export WEBKIT2_PAUSE_WEB_PROCESS_ON_LAUNCH=1
          ./MiniBrowser & while [ -z `pidof QtWebProcess` ]; do sleep 1; done; \
           gdb --pid=`pidof QtWebProcess`

         * WebProcess/qt/WebProcessMainQt.cpp:
         (WebKit::WebProcessMainQt):

git-svn-id: svn://svn.chromium.org/blink/trunk@70760 bbb929c8-8fbe-4397-9dbb-9b2b20218538